--- a/Views/CheckItems/Edit.cshtml
+++ b/Views/CheckItems/Edit.cshtml
@@ -7,12 +7,8 @@
 <h1>Edit</h1>
 
 <h4>CheckItem</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        
-    </div>
-</div>
+
+
 <form asp-action="Edit">
 <table class="table">
     <thead>
@@ -21,7 +17,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-               @* @Html.DisplayNameFor(model => model.IsCheck)*@
+               Checked
             </th>
             <th></th>
         </tr>
