--- a/Views/Properties/Create.cshtml
+++ b/Views/Properties/Create.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Amenities" class="control-label"></label>
-                <input asp-for="Amenities" class="form-control" />
+                <textarea asp-for="Amenities" class="form-control"></textarea>
                 <span asp-validation-for="Amenities" class="text-danger"></span>
             </div>
             <div class="form-group">
