--- a/Views/Properties/Details.cshtml
+++ b/Views/Properties/Details.cshtml
@@ -105,7 +105,7 @@
             @Html.DisplayNameFor(model => model.pricePerNigth)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.pricePerNigth)
+            @Html.DisplayFor(model => model.pricePerNigth) €
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
@@ -126,7 +126,9 @@
             @Html.DisplayFor(model => model.Amenities)
         </dd>
     </dl>
-
+    <div class="form-group">
+        <a class="btn btn-success" asp-controller="Evaluations" asp-action="ListComments" asp-route-id="@Model.Id">Property Reviews</a>
+    </div>
 
     <div class="mapouter">
         <div class="gmap_canvas">
@@ -157,22 +159,23 @@
         </div>
     </div>
 </div>
-<div class="form-group">
-    <a asp-controller="Evaluations" asp-action="ListComments" asp-route-id="@Model.Id">Ver Comentários sobre a Propriedade</a>
-</div>
-@if(User.IsInRole("Client")){ 
-<div class="form-group">
-    <a asp-controller="Reservations" asp-action="Create" asp-route-id="@Model.Id">
-        <input type="button" value="Verificar Disponibilidade" class="btn btn-primary" />
-    </a>
-</div>
+<br />
+
+@if (User.IsInRole("Client"))
+{
+    <div class="form-group">
+        <a asp-controller="Reservations" asp-action="Create" asp-route-id="@Model.Id">
+            <input type="button" value="Check Availability" class="btn btn-primary" />
+        </a>
+    </div>
 }
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
 <br />
 <br />
+
 
 <script>
   function updateMap() {
