--- a/Views/Reservations/Details.cshtml
+++ b/Views/Reservations/Details.cshtml
@@ -9,71 +9,94 @@
 <div>
     <h4>Reservation</h4>
     <hr /> 
-    @*@foreach(var image in Model.Property.Images){
-                @image.Id
-                    {
-                    <img class="img-thumbnail" src="data:@image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" style="width:250px;height:200px;" />
-                    }
-                }*@
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Property.Tittle)
+<dl class="row">
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Property.Tittle)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Property.Tittle)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Property.Description)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Property.Description)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Property.pricePerNigth)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Property.pricePerNigth)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Property.City)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Property.City)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.CheckIn)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.CheckIn)
+    </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.CheckOut)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.CheckOut)
+    </dd>
+
+    @if (@Model.ApprovalComment != null)
+    {
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ApprovalComment)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Property.Tittle)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ApprovalComment)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Property.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Property.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Property.pricePerNigth)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Property.pricePerNigth)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Property.City)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Property.City)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CheckIn)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CheckIn)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CheckOut)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CheckOut)
-        </dd>
-         
-         @if(@Model.ApprovalComment != null){
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.ApprovalComment)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.ApprovalComment)
-            </dd>
-        }
-        else if (User.IsInRole("Owner_Employeer"))
-        {
-            <dt class = "col-sm-2">
-                Iens Selecionados CheckIn
-            </dt>
-            foreach(var item in @Model.ResultEntry.Itens)
+    }
+
+    @if(User.IsInRole("Owner_Manager") || User.IsInRole("Owner_Employeer")) 
+    { 
+
+            @if (Model.ResultEntry != null)
             {
-               <dd class = "col-sm-10">
-               @Html.DisplayFor(modelItem => item.Name);
-               </dd>
+                <dt class="col-sm-2">
+                    Itens Selecionados CheckIn
+                </dt>
+                foreach (var item in @Model.ResultEntry.Itens)
+                {
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(modelItem => item.Name);
+                    </dd>
+                }
             }
-        }
-    </dl>
+            @if (Model.ResultExit != null)
+            {
+                <dt class="col-sm-2">
+                    Itens Selecionados CheckOut
+                </dt>
+                foreach (var item in @Model.ResultExit.Itens)
+                {
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(modelItem => item.Name);
+                    </dd>
+                }
+            }
+
+            @if (Model.ImagesReservation != null)
+            {
+
+                @foreach (var image in Model.ImagesReservation)
+                {
+                    {
+                        <img class="img-thumbnail" src="data:@image.FileType;base64,@Convert.ToBase64String(image.Data, 0, image.Data.Length)" style="width:250px;height:200px;" />
+                    }
+                }
+            }
+    }
+</dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ReservationId">Edit</a> |
