--- a/Views/Reservations/Edit.cshtml
+++ b/Views/Reservations/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="ReservationId" />
             <div class="form-group">
                 <label asp-for="ApprovalComment" class="control-label"></label>
-                <input asp-for="ApprovalComment" class="form-control" />
+                <textarea asp-for="ApprovalComment" class="form-control"></textarea>
                 <span asp-validation-for="ApprovalComment" class="text-danger"></span>
             </div>
             <div class="form-group">
