--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,58 +21,46 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-link">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Properties" asp-action="Index">Alojamentos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Properties" asp-action="Index">Properties</a>
                         </li>
-                        @if (User.IsInRole("Owner_Employeer"))
-                        {
-                            <li class="nav-link">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservas</a>
-                            </li>
-                        }
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-link">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                             </li>
                             <li class="nav-link">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Admin Roles</a>
                             </li>
                         }
-                        @* <li class="nav-item">
-                            <form class="form-inline" asp-controller="Properties" asp-action="Search" method="get">
-                            <input type="text" class="form-control" name="text2search" placeholder="Search a Property..." />
-                            <input type="submit" value="Search" />
-                            </form>
-                            </li>*@
                         @if (User.IsInRole("Client"))
                         {
                             <li class="nav-link">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">As Minhas Reservas</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">My Reservations</a>
                             </li>
 
                             <li class="nav-link">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Index">Items</a>
                             </li>
                             <li class="nav-link">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Evaluations" asp-action="Index">Avaliações</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Evaluations" asp-action="Index">Evaluations</a>
                             </li>
                         } 
                        @if (User.IsInRole("Owner_Manager"))
                        {
                            <li class="nav-link">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                             </li>
                             <li class="nav-link">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="CheckLists" asp-action="Index">CheckLists</a>
                             </li>
                             <div class="nav-link">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="ClientEvaluations" asp-action="Index">Avaliações Clientes</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ClientEvaluations" asp-action="Index">Clients Evaluations</a>
                             </div>
                             <div class="dropdown">
-                                 <button class="dropbtn">Funcionários</button>
+                                 <button class="dropbtn">Employeers</button>
                                     <div class="dropdown-content">
-                                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Novo Funcionário</a>
-                                        <a class="nav-link text-dark" asp-controller="Companies" asp-action="Index">Gerir Funcionários</a>
+                                        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Add Employeer</a>
+                                        <a class="nav-link text-dark" asp-controller="Companies" asp-action="Index">Manager Employeers</a>
                                     </div>
                             </div>
                        }
@@ -90,7 +78,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Airbnb_PWEB - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Airbnb_PWEB - André Domingues 2019127839 && Maria Fátima Rodrigues 2019112924
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
