--- a/Views/Reservations/Index.cshtml
+++ b/Views/Reservations/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Lista de Reservas</h1>
+<h1>Reservations</h1>
 
 <table class="table" id="mytable">
     <thead>
@@ -29,6 +29,9 @@
             </th>
             <th>
                 Status
+            </th>
+            <th>
+                Options
             </th>
         </tr>
     </thead>
