--- a/Views/CheckItems/Delete.cshtml
+++ b/Views/CheckItems/Delete.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>CheckItem</h4>
@@ -17,17 +15,11 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CheckList)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CheckList.CheckListId)
-        </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CheckItemId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-controller="CheckLists" asp-action="Index">Back to List</a>
     </form>
 </div>
