--- a/Views/CheckItems/Edit.cshtml
+++ b/Views/CheckItems/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Airbnb_PWEB.Models.CheckItem>
+﻿@model Airbnb_PWEB.Models.CheckItem
 
 @{
     ViewData["Title"] = "Edit";
@@ -7,46 +7,26 @@
 <h1>Edit</h1>
 
 <h4>CheckItem</h4>
-
-
-<form asp-action="Edit">
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-               Checked
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-            
-            <div> 
-                <input type="checkbox" name="checkValues" value="@item.CheckItemId" /> 
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="CheckItemId" />
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-
- <div class="form-group">
-      <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
 </div>
-</form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="CheckLists" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
