--- a/Views/CheckLists/Index.cshtml
+++ b/Views/CheckLists/Index.cshtml
@@ -26,9 +26,9 @@
                     @Html.DisplayFor(modelItem => item.Category.Name)
                 </td>
                 <td>
-                    <a asp-controller="CheckItems" asp-action="Index" asp-route-id="@item.CheckListId">See Items</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CheckListId">Delete</a> |
-                    <a asp-controller="CheckItems" asp-action="Create" asp-route-id="@item.CheckListId">Add Item</a>
+                    <a asp-controller="CheckItems" asp-action="Index" asp-route-id="@item.CheckListId"><img src="resources/details.svg" width="4%" alt="Detalhes" /></a>
+                    <a asp-action="Delete" asp-route-id="@item.CheckListId"><img src="resources/delete.svg" width="4%" alt="Remover"></a>
+                    <a asp-controller="CheckItems" asp-action="Create" asp-route-id="@item.CheckListId"><img src="resources/add.png" width="4%" alt="Add Item" /></a>
                 </td>
             </tr>
         }
