--- a/Views/ClientEvaluations/Edit.cshtml
+++ b/Views/ClientEvaluations/Edit.cshtml
@@ -15,13 +15,8 @@
             <input type="hidden" asp-for="ClientEvaluationId" />
             <div class="form-group">
                 <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
+                <textarea asp-for="Comment" class="form-control"></textarea>
                 <span asp-validation-for="Comment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ReservationId" class="control-label"></label>
-                <select asp-for="ReservationId" class="form-control" asp-items="ViewBag.ReservationId"></select>
-                <span asp-validation-for="ReservationId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
