--- a/Views/Roles/Index.cshtml
+++ b/Views/Roles/Index.cshtml
@@ -17,8 +17,8 @@
     <thead>
         <tr>
             <th>Id</th>
-            <th>Nome</th>
-            <th>Detalhes</th>
+            <th>Name</th>
+            <th>Details</th>
         </tr>
     </thead>
     <tbody>
