--- a/Views/Evaluations/Index.cshtml
+++ b/Views/Evaluations/Index.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Lista de Comentários</h1>
+<h1>Reviews</h1>
 
 
 <table class="table" id="mytable">
     <thead>
         <tr>
             <th>
-                Propriedade
+                Properties
             </th>
             <th>
                 Check-In
@@ -20,12 +20,14 @@
                 Check-Out
             </th>
             <th>
-                Classificação
+                Classification
             </th>
             <th>
-                Comentário
+                Comments
             </th>
-            <th></th>
+            <th>
+                Options
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -48,8 +50,8 @@
                     @Html.DisplayFor(modelItem => item.Comment)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.EvaluationId">Editar</a> |
-                    <a asp-action="Delete" asp-route-id="@item.EvaluationId">Apagar</a>
+                    <a asp-action="Edit" asp-route-id="@item.EvaluationId"><img src="resources/edit.svg" width="10%" alt="Editar" /></a> 
+                    <a asp-action="Delete" asp-route-id="@item.EvaluationId"><img src="resources/delete.svg" width="10%" alt="Remover" /></a>
                 </td>
             </tr>
         }
