--- a/Views/Results/List.cshtml
+++ b/Views/Results/List.cshtml
@@ -26,4 +26,4 @@
     </tbody>
 </table>
 
-<a asp-controller="Reservations"asp-action="Index">Back to List</a></a>
+<a asp-controller="Reservations"asp-action="Index">Back to List</a>
