--- a/Views/Roles/Details.cshtml
+++ b/Views/Roles/Details.cshtml
@@ -8,11 +8,11 @@
         <tr>
             <th>Id</th>
             <th>Role</th>
-            <th>Primeiro Nome</th>
-            <th>Ultimo Nome</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>Email</th>
-            <th>Estado Conta</th>
-            <th>Opções</th>
+            <th>Status Account</th>
+            <th>Options</th>
         </tr>
     </thead>
     <tbody>
@@ -25,15 +25,15 @@
             <td>@utilizador.LastName</td>
             <td>@utilizador.UserName</td>
             @if (@utilizador.EmailConfirmed) {
-                <td>Ativada</td>
+                <td>Activated</td>
             }
             else
             {
-             <td>Desativada</td>
+             <td>Disabled</td>
             }
             <td>
                 <a class="btn btn-primary" asp-route-id=@utilizador.Id asp-action="Edit">Edit</a>
-                <a class="btn btn-primary" asp-route-id="@utilizador.Id" asp-action="ManageAccounts">Gerir</a>
+                <a class="btn btn-primary" asp-route-id="@utilizador.Id" asp-action="ManageAccounts">Manage</a>
             </td>
         </tr>
         }
